# sum-check

./: Cargo.toml
src/: main.rs
