[package]
name = "sum-check"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bls12-381 = "0.3.0"
ark-ff = "0.4"
ark-poly = "0.4"
ark-std = "0.3.0"
goldilocks-ntt = "0.1.0"
plonky2 = "0.1.3"
rand = "0.8.5"
